# andr_bot

./: .gitignore  CLAUDE.md  README.md  andr.config.yaml  andr_bot.service  start.py  start_robot.sh
andr_bringup/: CMakeLists.txt  package.xml
andr_bringup/config/: hardware.rviz  nav2_params.yaml  nav2_params_real.yaml  slam_toolbox_localization_params.yaml  slam_toolbox_localization_params_real.yaml  slam_toolbox_params_real.yaml
andr_bringup/description/: inertial_macros.xacro  robot.urdf.xacro
andr_bringup/launch/: robot.launch.py  rsp.launch.py
docs/: WIRING_AND_BRINGUP.md
firmware/: SETUP.md  platformio.ini
firmware/src/: main.cpp
inputs/: voice.py  web_ui.py
managers/: map_server.py  memory_manager.py
managers/migrations/: 001_create_schema_migrations.sql  002_create_maps.sql  003_create_points.sql  004_create_slam_config.sql  005_add_unique_point_label_per_map.sql
robot/: CMakeLists.txt  package.xml
robot/config/: ekf.yaml  sim.rviz  slam_toolbox_params.yaml
robot/description/: colors.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot_core.xacro
robot/launch/: robot.launch.py  rsp.launch.py
robot/worlds/: empty.world  test_world.world
runnables/: __init__.py  _sensor_fusion.py  lidar.py  todo_manager.py  webcam_audio.py
scripts/: deploy_scripts.sh
tools/: navigate_to_point.py  remember.py  save_memory.py  speak.py  spin.py  todo.py  walk.py
ui/static/: index.html  rviz.html
